Fix Scrollbar

--- a/src/webapp/css/Navbar.module.css
+++ b/src/webapp/css/Navbar.module.css
@@ -1,11 +1,11 @@
 .navbar {
-  height: 100%;
-  width: 12%;
+  height: calc(100%-41px);
+  width: 350px;
   position: fixed;
   z-index: 1;
   left: 0;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
   min-width: 350px;
   background-color: #202027;
 }
