--- a/src/webapp/css/Page.module.css
+++ b/src/webapp/css/Page.module.css
@@ -1,5 +1,33 @@
-.page{
-    margin-left: 350px;
-    padding-top: 5%;
-    z-index: 0;
+.page {
+  margin-left: 350px;
+  z-index: 0;
+  overflow-y: auto;
+  overflow-x: hidden;
+  height: calc(100%-41px);
+  width: calc(100%-350px);
+  position: fixed;
+}
+
+.page::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.9);
+  border-radius: 10px;
+  background-color: #757575;
+  box-shadow: rgba(0, 0, 0, 0.9);
+}
+
+.page::-webkit-scrollbar {
+  width: 12px;
+  background-color: #a1a1a1;
+}
+
+.page::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #0f0f0f;
+  background-image: -webkit-linear-gradient(
+    90deg,
+    transparent,
+    rgba(0, 0, 0, 0.4) 50%,
+    transparent,
+    transparent
+  );
 }
