--- a/src/webapp/css/QuestTable.module.css
+++ b/src/webapp/css/QuestTable.module.css
@@ -3,45 +3,69 @@
 }
 
 .table {
-  font-size: 19px;
+  font-size: 18px;
   font-weight: normal;
   width: 100%;
   max-width: 100%;
   min-width: 500px;
   background-color: #202020;
-  overflow: hidden;
+  overflow-x: hidden;
   border-collapse: collapse;
   border-spacing: 0;
 }
 
 .table td,
 .table th {
-  text-align: center;
-  padding: 8px;
+  text-align: left;
+  padding: 20px 8px;
   border: none;
 }
 
 .table td {
-  font-size: 18px;
+  font-size: 16px;
 }
 
 .table thead th {
-  color: #909090;
+  color: #ffffff;
   background: #202020;
 }
 
 .table tfoot tr {
-  color: #909090;
+  color: #ffffff;
   background: #202020;
   width: 100%;
 }
 
 .table tr:nth-child(even) {
-  color: #909090;
+  color: #ffffff;
   background: #202020;
 }
 
 .table tr:nth-child(odd) {
-  color: #909090;
+  color: #ffffff;
   background: #303030;
+}
+
+.icon {
+  width: 5%;
+}
+
+.name {
+  width: 41%;
+}
+
+.category {
+  width: 24%;
+}
+
+.location {
+  width: 11%;
+}
+
+.level {
+  width: 7%;
+}
+
+.action {
+  width: 12%;
 }
